<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/task_name"
        app:boxBackgroundColor="@color/bg_color"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_baseline_star_border_24"
        app:endIconTint="@color/star_color"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iconSetDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_event_24"
            app:tint="@color/primary_color_dark10" />

        <TextView
            android:id="@+id/tvSetDeadline"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/deadline"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iconSetNotification"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_notifications_24"
            app:tint="@color/icon_notify" />

        <TextView
            android:id="@+id/tvSetNotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="3dp"
            android:text="@string/remind"
            android:textSize="16sp" />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:hint="@string/note"
        app:boxBackgroundColor="@color/bg_color"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:gravity="start"
        android:layout_height="180dp"
        android:id="@+id/etNote" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/save"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:id="@+id/btnSaveTask"
            android:textColor="@color/white"
            android:background="@drawable/bg_button"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/btn_cancel"
            android:layout_marginStart="5dp"
            android:id="@+id/btnCloseTask"
            android:textColor="@color/white"
            android:background="@drawable/bg_button" />
    </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>